--- a/QRCodeGenerator/style.css
+++ b/QRCodeGenerator/style.css
@@ -28,7 +28,7 @@ body {
 .container input {
   width: 100%;
   height: 50px;
-  border: 1px solid #494eea;
+  border: 1px solid #6613b4;
   outline: 0;
   padding: 10px;
   margin: 10px 0 20px;
@@ -37,7 +37,7 @@ body {
 .container button {
   width: 100%;
   height: 50px;
-  background: #494eea;
+  background: #6613b4;
   color: #fff;
   border: 0;
   outline: 0;
